--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
     image: postgres:15
     container_name: kitaplik_postgres
     environment:
-      POSTGRES_USER: ogrenci
-      POSTGRES_PASSWORD: guvenli_sifre123
-      POSTGRES_DB: kitaplik_db
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASS}
+      POSTGRES_DB: ${DB_NAME}
     ports:
-      - "5432:5432"
+      - "${DB_PORT}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
@@ -16,7 +16,7 @@ services:
     image: redis:7
     container_name: kitaplik_redis
     ports:
-      - "6379:6379"
+      - "${REDIS_PORT}:6379"
 
 volumes:
   postgres_data:
